[gd_scene load_steps=4 format=3 uid="uid://c6j8jic0vhcgq"]

[ext_resource type="Script" path="res://scenes/prefabs/magnet.gd" id="1_c7n18"]
[ext_resource type="Texture2D" uid="uid://catog4cl4ltxq" path="res://icon.svg" id="2_06y36"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7pieg"]

[node name="FloatingMagnet" type="Node2D"]
script = ExtResource("1_c7n18")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_06y36")

[node name="MagneticZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MagneticZone"]
polygon = PackedVector2Array(-57, 84, -11, 0, 11, 0, 56, 84)

[node name="StickyZone" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StickyZone"]
shape = SubResource("RectangleShape2D_7pieg")
